# mandelbrot-shot

./: .gitmodules  CMakeLists.txt  README.md
Mandelbrot/: Mandelbrot.cpp  build.sh
src/: frag.glsl  main.cpp
